# Ko-CSAT-Reasoning

./: .bashrc_backup  .gitignore  .tmux.conf_backup  01_eda_question_answer_para.ipynb  README.md  check.py  cot_unsloth_model.py  install.sh  pyproject.toml  requirements.txt  run.py  run_inference.py  shuffle.py  unsloth_dpo_extension.py
.github/: PULL_REQUEST_TEMPLATE.md
analysis/: test_korean_history_structure.json
analysis_pred/: compare_predictions.py
boostcamp_baseline/: baseline_code.ipynb  requirements.txt
code/: __init__.py  base_retriever.py  bm25_retriever.py  ensemble_retriever.py  vector_retriever.py
config/: config.yaml  exaone.yaml  llama8b.yaml  qwen2.5.yaml  qwen2.5_cot.yaml  qwen2.5_dpo_train.yaml  qwen3_2507_Instruct_base.yaml  qwen3_2507_Instruct_data_augmented.yaml  qwen3_2507_Instruct_test.yaml  qwen3_2507_base.yaml  qwen3_2507_ollama_base.yaml  qwen3_2507_ollama_instruct.yaml  qwen3_2507_ollama_thinking.yaml  qwen3_2507_ollama_thinking1.yaml  qwen3_2507_ollama_thinking2.yaml  qwen3_2507_ollama_thinking_base.yaml  qwen3_2507_ollama_thinking_param.yaml  qwen3_2507_thinking.yaml  qwen3_2507_thinking_base.yaml  qwen3_2507_thinking_test.yaml  qwen3_2507_thinking_train_data.yaml  qwen3_32B_ollama_memo.yaml  qwen3_awq.yaml  rag.yaml  solar.yaml  unsloth_config.yaml
data/: eval.csv  history_eval.csv  history_recall_annotation_sheet.csv  history_test.csv  history_train.csv  history_train_390.csv  history_train_aug.csv
dataAug/: addHug.py  concatCsv.py
eda/: eda_analysis.py  ipynb2py.sh  py2ipynb.sh
faiss_index/: index.faiss  index.pkl
(+103 files in other folders)
