[project]
name = "unsloth-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autoawq>=0.2.9",
    "hydra-core>=1.3.2",
    "scikit-learn>=1.7.2",
    "transformers>=4.57.3",
    "trl>=0.24.0",
    "unsloth>=2025.12.9",
]
