[project]
name = "unsloth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.10.1",
    "datasets>=4.4.2",
    "hydra-core>=1.3.2",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest]
minversion = "9.0"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
